<resources>
    <string name="app_name">StrzihApp</string>
    <string name="edit_note_name">Название</string>
    <string name="edit_note_description">Описание</string>
    <string name="note_name">Название</string>
    <string name="note_description">Описание</string>
    <string name="edit_save_button">Сохранить</string>
    <string name="add_button">Добавить</string>
    <string name="show_last_button">Показать последнюю заметку</string>
    <string name="edit_button">Редактировать</string>


    <string name="h1">My text message1212</string>
    <string name="h2">My text messagsase</string>
    <string name="h3">My text messagsase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>